k8s/ingress-microservices.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microservices-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - microservices.hamidbong.tech
    secretName: servicepython-cert
  rules:
  - host: microservices.hamidbong.tech
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: service-python-service
            port:
              number: 5003
