k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /login
            pathType: Prefix
            backend:
              service:
                name: login-service
                port:
                  number: 80
          - path: /products
            pathType: Prefix
            backend:
              service:
                name: gestion-prod-service
                port:
                  number: 80
          - path: /stats
            pathType: Prefix
            backend:
              service:
                name: dashboard-service
                port:
                  number: 80
